--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,3 +1,9 @@
+section.header {
+    position: fixed;
+    top: 0;
+    width: 80%;
+}
+
 header {
     padding: 20px;
     display: flex;
@@ -11,7 +17,7 @@ header {
 
 .photo img {
     vertical-align: middle;
-    border-radius: 50%;
+    border-radius: 25%;
     max-width: 100px;
     max-height: 100px;
     border: 5px solid #EEEEEE;
